# orcpy

./: LICENSE  README.md  fig.html
orcpy/: pyproject.toml
orcpy/orcpy/design/: __init__.py
